crates/swc_ecma_parser/tests/test262-error-references/fail/de74c4e7bb0fce51.js.stderr
error: Trailing comma is not allowed
 --> $DIR/tests/test262-parser/fail/de74c4e7bb0fce51.js:1:12
  |
1 | const x = 0,
  |            ^

